--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <title>Homework 1</title>
 <script src="./js/task-1.js"></script>
 <script src="./js/task-2.js"></script>
+<script src="./js/task-3.js"></script>
